hphp/test/zend/good/zend/ns_065.php
<?php
use X\Y as test, X\Z as test2;

require "ns_065.inc";

test\foo();
test2\foo();